# systemd-gui-gtk

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  requirements.txt  setup.cfg
src/systemd_gui/: __init__.py  __main__.py  app.py
src/systemd_gui/etc/: default_settings.yaml  settings.yaml
src/systemd_gui/lib/: __init__.py  logger.py  settings.py  systemd.py
src/systemd_gui/lib/abstracts/: __init__.py  logger.py  settings.py  systemd_proxy.py
src/systemd_gui/lib/abstracts/singleton/: __init__.py
src/systemd_gui/lib/constants/: __init__.py  paths.py  widgets.py
src/systemd_gui/lib/errors/: __init__.py  no_proto_assigned.py
src/systemd_gui/lib/signals/: __init__.py  about.py  combo_box_changed.py  quit.py  search_changed.py
src/systemd_gui/lib/signals/systemd/: alter_clicked.py  apply_clicked.py  reset_clicked.py
src/systemd_gui/lib/signals/units_table_filters/: inactive_toggled.py  masked_toggled.py  unloaded_toggled.py  user_toggled.py
src/systemd_gui/lib/signals/view_options/: active_state_toggled.py  description_toggled.py  load_state_toggled.py  sub_state_toggled.py  toolbar_toggled.py
src/systemd_gui/lib/structures/: __init__.py  page_type.py  unit_command_type.py  unit_type.py
src/systemd_gui/lib/utils/: __init__.py
src/systemd_gui/ui/: about.glade  about.glade~  application.glade  application.glade~
