[metadata]
name = systemd-gui
version = 0.9.0
author = Cho Hyunwoo

[options]
install_requires =
    pycairo
    PyGObject
    PyYAML
package_dir =
    = src
include_package_data = True

[options.entry_points]
console_scripts =
    systemd-cli = systemd_gui:main
gui_scripts =
    systemd-gui = systemd_gui:main